adding spike detection publication

--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,58 +1,8 @@
-@article{Moghimi2010,
-abstract = {Visible and near infrared spectroscopic (Vis/NIRS) techniques have shown promise as rapid and non-destructive tools to evaluate the various internal quality attributes of fruits and vegetables. The objective of this study was to develop a calibration model for prediction of soluble solids content and acidity (pH) of kiwifruit by using visible and near infrared spectroscopy and chemometrics. The transmission spectra of kiwifruit were obtained in the wavelength range from 400 to 1000 nm. The effects of different pre-processing methods and spectra treatments, such as standard normal variate transformation (SNV), multiplicative scatter correction (MSC), and median filter and first derivative (D1) were analysed. The prediction models were developed by principal component analysis (PCA) and partial least square regression (PLS). The correlation coefficient for soluble solids content and pH were 0.93, 0.943 and root mean square error of prediction (RMSEP) was 0.259̊Brix and 0.076, respectively. These results were achieved when SNV was utilised in conjunction with median filter and first derivative. This showed the capability of Vis/NIRS and the important role of chemometrics in developing accurate models for the prediction of kiwifruit internal quality characteristics. {\textcopyright} 2010 IAgrE.},
-author = {Moghimi, Ali and Aghkhani, Mohammad H. and Sazgarnia, Ameneh and Sarmad, Majid},
-doi = {10.1016/j.biosystemseng.2010.04.002},
-file = {:C$\backslash$:/Users/coeadmin-amoghimi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2010 - VisNIR spectroscopy and chemometrics for the prediction of soluble solids content and acidity (pH) of kiwifru(2).pdf:pdf},
-isbn = {1537-5110},
-issn = {15375110},
-journal = {Biosystems Engineering},
-number = {3},
-pages = {295--302},
-publisher = {IAgrE},
-title = {{Vis/NIR spectroscopy and chemometrics for the prediction of soluble solids content and acidity (pH) of kiwifruit}},
-url = {http://dx.doi.org/10.1016/j.biosystemseng.2010.04.002},
-volume = {106},
-year = {2010}
-}
-@article{Moghimi2011,
-abstract = {Viscoelastic behaviour of some commercial sweet cherry cultivars of Iran has been studied in current research. For this purpose, stress relaxation test was conducted on five cultivars of sweet cherry including Siah Mashhad, Abarde, Victoria, Dovom Ras and Tak Dane. Two common models (Generalised Maxwell model and Peleg model) were fitted to the experimental data. Both models could describe stress relaxation behaviour of cherries (R 2 =0.99), but Generalised Maxwell model had lower root mean square error (RMSE) than Peleg model. Based on analysis of stress relaxation data using models constants, Tak Dane exhibited more solid properties, while Victoria showed less elastic behaviour than other cultivars. The results revealed that relaxation ratio (R{\%}) and the area under the stress relaxation curve could be effective alternative to models with easier mathematical procedure. {\textcopyright} 2011 The Authors. International Journal of Food Science and Technology {\textcopyright} 2011 Institute of Food Science and Technology.},
-author = {Moghimi, Ali and Saiedirad, Mohammad Hosaien and Moghadam, Ebrahim Ganji},
-doi = {10.1111/j.1365-2621.2011.02563.x},
-file = {:C$\backslash$:/Users/coeadmin-amoghimi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Saiedirad, Moghadam - 2011 - Interpretation of viscoelastic behaviour of sweet cherries using rheological models(2).pdf:pdf},
-issn = {09505423},
-journal = {International Journal of Food Science and Technology},
-keywords = {Maxwell model,Peleg model,Stress relaxation,Sweet cherry,Viscoelastic behaviour},
-number = {4},
-pages = {855--861},
-title = {{Interpretation of viscoelastic behaviour of sweet cherries using rheological models}},
-volume = {46},
-year = {2011}
-}
-@article{Moghimi2011a,
-author = {Moghimi, Ali and Aghkhani, Mohammad H. and Sazgarnia, Ameneh and Abbaspour-Fard, Mohammad H.},
-doi = {10.1111/j.1745-4530.2009.00547.x},
-file = {:C$\backslash$:/Users/coeadmin-amoghimi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2011 - Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations(2).pdf:pdf},
-issn = {01458876},
-journal = {Journal of Food Process Engineering},
-number = {5},
-pages = {1759--1774},
-title = {{Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations}},
-volume = {34},
-year = {2011}
-}
-@article{Moghimi2018,
-author = {Moghimi, Ali and Yang, Ce and Miller, Marisa E. and Kianian, Shahryar F. and Marchetto, Peter M.},
-doi = {10.3389/fpls.2018.01182},
-file = {:C$\backslash$:/Users/coeadmin-amoghimi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2018 - A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging(2).pdf:pdf},
-journal = {Frontiers in Plant Science},
-title = {{A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging}},
-year = {2018}
-}
 @article{Moghimi2018a,
 abstract = {{\textcopyright} 2013 IEEE. Hyperspectral imaging is becoming an increasingly popular tool for high-throughput plant phenotyping, because it provides remarkable insights about the health status of plants. Feature selection is a key component in a hyperspectral image analysis, largely because a significant portion of spectral features are redundant and/or irrelevant, depending on the desired application. This paper presents an ensemble feature selection method to identify the most informative spectral features for practical applications in plant phenotyping. The hyperspectral data set contained the images of four wheat lines, each with a control and a salt (NaCl) treatment. To rank spectral features, six feature selection methods were used as the base for the ensemble: correlation-based feature selection, ReliefF, sequential feature selection, support vector machine-recursive feature elimination (SVM-RFE), LASSO logistic regression, and random forest. The best results were achieved by the ensemble of ReliefF, SVM-RFE, and random forest, which drastically reduced the dimension of the hyperspectral data set from 215 to 15 features, while improving the accuracy in classifying the salt-treated vegetation pixels from the control pixels by 8.5{\%}. To transform the hyperspectral data set into a multispectral data set, six wavelengths as the center of broad multispectral bands around the most prominent features were determined by a clustering algorithm. The result of salt tolerance assessment of the four wheat lines using the derived multispectral data set was similar to that of the hyperspectral data set. This demonstrates that the proposed feature selection pipeline can be utilized for determining the most informative features and can be a valuable tool in the development of tailored multispectral cameras.},
 author = {Moghimi, Ali and Yang, Ce and Marchetto, Peter M.},
 doi = {10.1109/ACCESS.2018.2872801},
-file = {:C$\backslash$:/Users/coeadmin-amoghimi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Marchetto - 2018 - Ensemble Feature Selection for Plant Phenotyping A Journey from Hyperspectral to Multispectral Imag(3).pdf:pdf},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Marchetto - 2018 - Ensemble Feature Selection for Plant Phenotyping A Journey from Hyperspectral to Multispectral Imag(3).pdf:pdf},
 issn = {21693536},
 journal = {IEEE Access},
 keywords = {Band selection,classification,ensemble feature selection,hyperspectral imaging,machine learning,multispectral imging,plant phenotyping,salt stress,wheat},
@@ -68,10 +18,91 @@ archivePrefix = {arXiv},
 arxivId = {1906.09666},
 author = {Moghimi, Ali and Yang, Ce and Anderson, James A.},
 eprint = {1906.09666},
-file = {:C$\backslash$:/Users/coeadmin-amoghimi/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Anderson - 2019 - Aerial hyperspectral imagery and deep neural networks for high-throughput yield phenotyping in wheat(2).pdf:pdf},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Yang, Anderson - 2019 - Aerial hyperspectral imagery and deep neural networks for high-throughput yield phenotyping in wheat(2).pdf:pdf},
 journal = {arXiv preprint, arXiv:1906.09666 [cs.CV].},
 title = {{Aerial hyperspectral imagery and deep neural networks for high-throughput yield phenotyping in wheat}},
 url = {http://arxiv.org/abs/1906.09666},
 year = {2019}
 }
-
+@article{Moghimi2011,
+abstract = {Viscoelastic behaviour of some commercial sweet cherry cultivars of Iran has been studied in current research. For this purpose, stress relaxation test was conducted on five cultivars of sweet cherry including Siah Mashhad, Abarde, Victoria, Dovom Ras and Tak Dane. Two common models (Generalised Maxwell model and Peleg model) were fitted to the experimental data. Both models could describe stress relaxation behaviour of cherries (R 2 =0.99), but Generalised Maxwell model had lower root mean square error (RMSE) than Peleg model. Based on analysis of stress relaxation data using models constants, Tak Dane exhibited more solid properties, while Victoria showed less elastic behaviour than other cultivars. The results revealed that relaxation ratio (R{\%}) and the area under the stress relaxation curve could be effective alternative to models with easier mathematical procedure. {\textcopyright} 2011 The Authors. International Journal of Food Science and Technology {\textcopyright} 2011 Institute of Food Science and Technology.},
+author = {Moghimi, Ali and Saiedirad, Mohammad Hosaien and Moghadam, Ebrahim Ganji},
+doi = {10.1111/j.1365-2621.2011.02563.x},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi, Saiedirad, Moghadam - 2011 - Interpretation of viscoelastic behaviour of sweet cherries using rheological models.pdf:pdf},
+issn = {09505423},
+journal = {International Journal of Food Science and Technology},
+keywords = {Maxwell model,Peleg model,Stress relaxation,Sweet cherry,Viscoelastic behaviour},
+number = {4},
+pages = {855--861},
+title = {{Interpretation of viscoelastic behaviour of sweet cherries using rheological models}},
+volume = {46},
+year = {2011}
+}
+@article{Moghimi2011a,
+author = {Moghimi, Ali and Aghkhani, Mohammad H. and Sazgarnia, Ameneh and Abbaspour-Fard, Mohammad H.},
+doi = {10.1111/j.1745-4530.2009.00547.x},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2011 - Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations.pdf:pdf},
+issn = {01458876},
+journal = {Journal of Food Process Engineering},
+number = {5},
+pages = {1759--1774},
+title = {{Improvement of NIR transmission mode for internal quality assessment of fruit using different orientations}},
+volume = {34},
+year = {2011}
+}
+@article{Moghimi2018,
+author = {Moghimi, Ali and Yang, Ce and Miller, Marisa E. and Kianian, Shahryar F. and Marchetto, Peter M.},
+doi = {10.3389/fpls.2018.01182},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2018 - A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging.pdf:pdf},
+journal = {Frontiers in Plant Science},
+title = {{A Novel Approach to Assess Salt Stress Tolerance in Wheat Using Hyperspectral Imaging}},
+year = {2018}
+}
+@article{Moghimi2010,
+abstract = {Visible and near infrared spectroscopic (Vis/NIRS) techniques have shown promise as rapid and non-destructive tools to evaluate the various internal quality attributes of fruits and vegetables. The objective of this study was to develop a calibration model for prediction of soluble solids content and acidity (pH) of kiwifruit by using visible and near infrared spectroscopy and chemometrics. The transmission spectra of kiwifruit were obtained in the wavelength range from 400 to 1000 nm. The effects of different pre-processing methods and spectra treatments, such as standard normal variate transformation (SNV), multiplicative scatter correction (MSC), and median filter and first derivative (D1) were analysed. The prediction models were developed by principal component analysis (PCA) and partial least square regression (PLS). The correlation coefficient for soluble solids content and pH were 0.93, 0.943 and root mean square error of prediction (RMSEP) was 0.259̊Brix and 0.076, respectively. These results were achieved when SNV was utilised in conjunction with median filter and first derivative. This showed the capability of Vis/NIRS and the important role of chemometrics in developing accurate models for the prediction of kiwifruit internal quality characteristics. {\textcopyright} 2010 IAgrE.},
+author = {Moghimi, Ali and Aghkhani, Mohammad H. and Sazgarnia, Ameneh and Sarmad, Majid},
+doi = {10.1016/j.biosystemseng.2010.04.002},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2010 - VisNIR spectroscopy and chemometrics for the prediction of soluble solids content and acidity (pH) of kiwifruit.pdf:pdf},
+isbn = {1537-5110},
+issn = {15375110},
+journal = {Biosystems Engineering},
+number = {3},
+pages = {295--302},
+publisher = {IAgrE},
+title = {{Vis/NIR spectroscopy and chemometrics for the prediction of soluble solids content and acidity (pH) of kiwifruit}},
+url = {http://dx.doi.org/10.1016/j.biosystemseng.2010.04.002},
+volume = {106},
+year = {2010}
+}
+@article{Qiu2019,
+author = {Qiu, Ruicheng and Yang, Ce and Moghimi, Ali and Zhang, Man and Steffenson, Brian},
+doi = {10.20944/preprints201910.0056.v1},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Qiu et al. - 2019 - Detection of Fusarium Head Blight in Wheat Using a Deep Neural Network and Color Imaging.pdf:pdf},
+journal = {Remote Sensing},
+keywords = {color imaging,deep neural network,fusarium head blight disease},
+number = {October},
+pages = {1--19},
+title = {{Detection of Fusarium Head Blight in Wheat Using a Deep Neural Network and Color Imaging}},
+year = {2019}
+}
+@phdthesis{Moghimi2019a,
+author = {Moghimi, Ali},
+file = {:C$\backslash$:/Users/Ali/Google Drive (moghi005@umn.edu)/Minnesota/Research/Dissertation/Dissertation Chapters/Moghimi{\_}umn{\_}0130E{\_}20064.pdf:pdf},
+number = {February},
+school = {Retrieved from the University of Minnesota Digital Conservancy},
+title = {{Integrating Hyperspectral Imaging and Artificial Intelligence to Develop Automated Frameworks for High-throughput Phenotyping in Wheat}},
+url = {http://hdl.handle.net/11299/202435},
+year = {2019}
+}
+@inproceedings{Moghimi2019,
+abstract = {Fusarium head blight (FHB, also known as scab), is among the most widespread and devastating diseases attacking small grain crops, mainly wheat and barley. Besides its negative impact on yield and grain quality, the FHB pathogens produce mycotoxins, such as deoxynivalenol (DON), that contaminate the grain, making it unsuitable for human and livestock consumption. Development of FHB resistant cultivars through breeding is the most effective solution in response to the FHB threat. The bottleneck of FHB breeding for disease resistance is the visual assessment of spikes, which is extremely demanding, laborious, time-consuming, and most importantly subject to human error. The objective of this study was to identify the most informative spectral bands to develop an automated phenotyping framework for discriminating FHB infected spikes from healthy ones. For this purpose, hyperspectral images from a known susceptible wheat variety, Wheaton, were captured in a laboratory where we could control lighting, background, and the orientation of spikes with respect to the imager. Subsequent to the required preprocessing, spectral bands were ranked by an ensemble feature selection pipeline. Afterwards, a density estimator with Gaussian kernel was used to cluster the most informative bands and find the center of broad multispectral bands. Kernel estimator identified five bands, including 766, 868, 696, 591, and 540 nm (listed in order) as the cluster centers to develop a multispectral sensor. The classification results using the selected band revealed that two spectral bands are sufficient to achieve the maximum classification accuracy, demonstrating the redundancy and high correlation between hyperspectral bands for this application.},
+address = {Boston, MA},
+author = {Moghimi, Ali and Yang, Ce and Anderson, James A and Reynolds, Susan K},
+booktitle = {ASABE Annual International Meeting},
+doi = {10.13031/aim.201900815},
+file = {:C$\backslash$:/Users/Ali/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Moghimi et al. - 2017 - Selecting informative spectral bands using machine learning techniques to detect Fusarium head blight in wheat.pdf:pdf},
+keywords = {Band selection,Fusarium,hyperspectral imaging,machine learning,phenotyping,scab},
+title = {{Selecting informative spectral bands using machine learning techniques to detect Fusarium head blight in wheat}},
+url = {https://doi.org/10.13031/aim.201900815},
+year = {2019}
+}
